chore: update README and README.Rmd for version bump and value box adjustments
* Bumped package version to 0.0.0.9009.
* Updated test results and coverage statistics in README files.
* Adjusted the Value Boxes for improved layout and responsiveness.

--- a/README.Rmd
+++ b/README.Rmd
@@ -256,7 +256,6 @@ covr::package_coverage()
 ```
 
 ### Recent Updates
-
 - Comprehensive test suite with 240+ tests
 - Enhanced module test coverage (dashboard, KPI cards, data upload)
 - CI/CD pipeline with multi-platform testing
@@ -265,6 +264,7 @@ covr::package_coverage()
 - Documentation with pkgdown
 - Sample data and example usage
 - Resolved namespace conflicts and import issues
+- Adjusted the Value Boxes.
 
 ### Known Issues
 
